# PYRo-uCtrl-Unity-Lucky

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  PYRo.ioc
Core/Inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: dma.c  freertos.c  gpio.c  main.c  stm32h7xx_it.c  usart.c
PYRo/Algorithm/Common/: pyro_algo_common.cpp  pyro_algo_common.h  pyro_common.cpp  pyro_common.h
PYRo/Algorithm/EKF/: QuaternionEKF.cpp
PYRo/Algorithm/KF/: kalman_filter.h
PYRo/Algorithm/Kinematics/: pyro_kin_hybrid.cpp  pyro_kin_hybrid.h  pyro_kin_mec.cpp  pyro_kin_mec.h  pyro_kin_rudder.cpp  pyro_kin_rudder.h
PYRo/Algorithm/PID/: pyro_algo_pid.h
PYRo/Application/: pyro_chassis.cpp
PYRo/Application/Demo/: demo_task.cpp  pyro_rc_demo.cpp  pyro_shoot_demo.cpp
PYRo/Application/Mission/: pyro_app_thread.cpp  pyro_init_thread.cpp  pyro_mission_planer.cpp
PYRo/Application/Mission/Hero/: pyro_booster_app.cpp  pyro_chassis_app.cpp  pyro_gimbal_app.cpp
PYRo/Communication/: pyro_com_canrx.cpp  pyro_com_cantx.cpp  pyro_com_cantx.h
PYRo/Component/CRC/: pyro_crc.cpp  pyro_crc.h
PYRo/Component/Chassis/: pyro_chassis_drv.cpp  pyro_chassis_drv.h
PYRo/Component/INS/: pyro_ins.cpp  pyro_ins.h
PYRo/Component/Motor/: pyro_dji_motor_drv.cpp  pyro_dji_motor_drv.h  pyro_dm_motor_drv.cpp  pyro_dm_motor_drv.h  pyro_motor_base.cpp  pyro_motor_base.h
PYRo/Component/Powercontrol/: pyro_power_control_drv.cpp  pyro_power_control_drv.h
PYRo/Component/Powermeter/: pyro_powermeter.cpp  pyro_powermeter.h
PYRo/Component/RC/: README.md  pyro_dr16_rc_drv.cpp  pyro_dr16_rc_drv.h  pyro_rc_base_drv.cpp  pyro_rc_base_drv.h  pyro_rc_hub.cpp  pyro_rc_hub.h  pyro_vt03_rc_drv.cpp  pyro_vt03_rc_drv.h
PYRo/Component/Referee/: fifo.h  protocol.h  pyro_referee.cpp  pyro_referee.h  referee.c  referee_drv.cpp  referee_usart_task.c
PYRo/Component/Shoot/: pyro_fric_drv.cpp  pyro_fric_drv.h  pyro_shoot_base.cpp  pyro_shoot_base.h  pyro_trigger_drv.cpp  pyro_trigger_drv.h
PYRo/Component/Supercap/: pyro_supercap_drv.cpp  pyro_supercap_drv.h
PYRo/Component/Wheel/: pyro_steering_wheel_drv.cpp  pyro_steering_wheel_drv.h  pyro_wheel_drv.cpp
PYRo/Comunication/: pyro_com_canrx.h  pyro_com_cantx.cpp  pyro_com_cantx.h
PYRo/Core/Config/: pyro_core_config.h
PYRo/Core/FSM/: README.md  pyro_core_fsm.h  pyro_core_fsm.tpp
PYRo/Core/Lock/: README.md  pyro_mutex.cpp  pyro_mutex.h  pyro_rw_lock.h
PYRo/Core/Memory/: README.md  pyro_core_dma_heap.c
PYRo/Core/Task/: README.md  pyro_task.cpp  pyro_task.h
PYRo/Debug/JCOM/: pyro_jcom.cpp  pyro_jcom.h
PYRo/Debug/VOFA/: pyro_vofa.cpp
PYRo/Device/BMI088/: BMI088_driver.cpp  BMI088_driver.h  BMI088_middleware.cpp  BMI088_middleware.h  BMI088_reg.h
PYRo/Module/: pyro_module_base.cpp  pyro_module_base.h  pyro_module_base.tpp
PYRo/Module/Booster/Quad/: pyro_quad_booster.cpp  pyro_quad_booster.h
PYRo/Module/Booster/Quad/fsm/: pyro_quad_active_state.cpp  pyro_quad_busy_state.cpp  pyro_quad_homing_state.cpp  pyro_quad_interim_state.cpp  pyro_quad_passive_state.cpp  pyro_quad_ready_state.cpp  pyro_quad_stall_state.cpp
PYRo/Module/Chassis/Hybrid/: pyro_hybrid_chassis.cpp  pyro_hybrid_chassis.h
PYRo/Module/Chassis/Hybrid/fsm/: pyro_hybrid_active_state.cpp  pyro_hybrid_cruising_state.cpp  pyro_hybrid_jumping_state.cpp  pyro_hybrid_passive_state.cpp
PYRo/Module/Chassis/Mecanum/: pyro_mec_chassis.cpp  pyro_mec_chassis.h
PYRo/Module/Chassis/Mecanum/fsm/: pyro_mec_active_state.cpp  pyro_mec_passive_state.cpp
PYRo/Module/Chassis/Rudder/: pyro_rud_chassis.h
PYRo/Module/Gimbal/Hero/Direct/: pyro_direct_gimbal.cpp  pyro_direct_gimbal.h
PYRo/Module/Gimbal/Hero/Direct/fsm/: pyro_direct_active_state.cpp  pyro_direct_passive_state.cpp
PYRo/Moudle/Chassis/: pyro_chassis_base.cpp  pyro_chassis_base.h  pyro_chassis_base.tpp
PYRo/Moudle/Chassis/Hybrid/: pyro_hybrid_chassis.cpp  pyro_hybrid_chassis.h
PYRo/Moudle/Chassis/Hybrid/fsm/: pyro_hybrid_climbing_state.cpp
PYRo/Moudle/Chassis/Mecanum/: pyro_mec_chassis.cpp  pyro_mec_chassis.h
PYRo/Moudle/Chassis/Rudder/: pyro_rud_chassis.cpp  pyro_rud_chassis.h
PYRo/Peripheral/CAN/: pyro_can_drv.cpp
PYRo/Peripheral/DWT/: README.md  pyro_dwt_drv.h
PYRo/Peripheral/UART/: README.md  pyro_uart_drv.cpp  pyro_uart_drv.h
cmake/stm32cubemx/: CMakeLists.txt
